--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.0.11",
+    "babel-plugin-module-resolver": "4.1.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-safe-area-context": "3.3.2",
@@ -40,6 +41,8 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
+    "@babel/plugin-proposal-export-namespace-from": "7.16.5",
+    "@babel/preset-env": "7.16.5",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "3.0.1",
     "@types/jest": "26.0.23",
@@ -48,7 +51,7 @@
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
     "babel-jest": "26.6.3",
-    "eslint": "7.14.0",
+    "eslint": "7.32.0",
     "eslint-config-standard-with-typescript": "21.0.1",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "11.1.0",
@@ -61,6 +64,7 @@
     "jest": "26.6.3",
     "lint-staged": "12.1.4",
     "metro-react-native-babel-preset": "0.66.2",
+    "pre-commit": "1.2.2",
     "prettier": "2.5.1",
     "react-native-codegen": "0.0.12",
     "react-native-svg-transformer": "0.14.3",
