--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "babel-plugin-module-resolver": "4.1.0",
     "react": "17.0.2",
     "react-native": "0.66.4",
+    "react-native-gesture-handler": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
-    "react-native-svg": "12.1.1"
+    "react-native-svg": "12.1.1",
+    "react-native-vector-icons": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
@@ -45,12 +47,13 @@
     "@babel/preset-env": "7.16.5",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "3.0.1",
-    "@types/jest": "26.0.23",
+    "@types/jest": "27.0.3",
     "@types/react-native": "0.66.4",
+    "@types/react-native-vector-icons": "^6.4.10",
     "@types/react-test-renderer": "17.0.1",
     "@typescript-eslint/eslint-plugin": "5.7.0",
     "@typescript-eslint/parser": "5.7.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.4.5",
     "eslint": "7.32.0",
     "eslint-config-standard-with-typescript": "21.0.1",
     "eslint-plugin-import": "2.25.3",
@@ -61,7 +64,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "eslint-plugin-react-native": "4.0.0",
     "husky": "7.0.4",
-    "jest": "26.6.3",
+    "jest": "27.4.5",
     "lint-staged": "12.1.4",
     "metro-react-native-babel-preset": "0.66.2",
     "pre-commit": "1.2.2",
