--- a/package.json
+++ b/package.json
@@ -33,13 +33,15 @@
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.0.11",
     "babel-plugin-module-resolver": "4.1.0",
+    "deep-equal": "2.0.5",
     "react": "17.0.2",
     "react-native": "0.66.4",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-vector-icons": "^9.0.0"
+    "react-native-toast-message": "2.1.1",
+    "react-native-vector-icons": "9.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.12.9",
@@ -47,6 +49,7 @@
     "@babel/preset-env": "7.16.5",
     "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "3.0.1",
+    "@types/deep-equal": "1.0.1",
     "@types/jest": "27.0.3",
     "@types/react-native": "0.66.4",
     "@types/react-native-vector-icons": "^6.4.10",
