--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,6 +2,14 @@ apply plugin: "com.android.application"
 apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 import com.android.build.OutputFile
 
+project.ext.envConfigFiles = [
+    debug: ".env.dev",
+    staging: ".env.staging",
+    release: ".env.staging"
+]
+
+apply from: project(':react-native-config').projectDir.getPath() + "/dotenv.gradle"
+
 /**
  * The react.gradle file registers a task for each build variant (e.g. bundleDebugJsAndAssets
  * and bundleReleaseJsAndAssets).
