--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "react": "17.0.2",
     "react-i18next": "11.15.2",
     "react-native": "0.66.4",
-    "react-native-config": "^1.4.5",
+    "react-native-config": "1.4.5",
     "react-native-gesture-handler": "2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "3.10.1",
