--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@react-navigation/native": "6.0.6",
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.0.11",
+    "@stripe/stripe-react-native": "0.2.3",
     "babel-plugin-module-resolver": "4.1.0",
     "deep-equal": "2.0.5",
     "i18next": "21.6.4",
