--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,15 +14,15 @@
 # For more information, see: https://docs.gitlab.com/ee/ci/yaml/index.html#stages
 
 stages: # List of stages for jobs, and their order of execution
-  - build
+  # - build
   - test
 # - deploy
 
-build-job: # This job runs in the build stage, which runs first.
-  stage: build
-  script:
-    - echo "Compiling the code..."
-    - echo "Compile complete."
+# build-job: # This job runs in the build stage, which runs first.
+#   stage: build
+#   script:
+#     - echo "Compiling the code..."
+#     - echo "Compile complete."
 
 # unit-test-job:   # This job runs in the test stage.
 #   stage: test    # It only starts when the job in the build stage completes successfully.
@@ -31,12 +31,10 @@ build-job: # This job runs in the build stage, which runs first.
 #     - sleep 60
 #     - echo "Code coverage is 90%"
 
-lint-test-job: # This job also runs in the test stage.
-  stage: test # It can run at the same time as unit-test-job (in parallel).
+lint-test-job:
+  stage: test
   script:
-    - echo "Linting code... This will take about 10 seconds."
-    - sleep 10
-    - echo "No lint issues found."
+    - yarn lint
 # deploy-job:      # This job runs in the deploy stage.
 #   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
 #   script:
