config code push for template

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ stages: # List of stages for jobs, and their order of execution
 lint-test-job:
   stage: test
   script:
-    - yarn lint
+    - yarn lint-staged
 # deploy-job:      # This job runs in the deploy stage.
 #   stage: deploy  # It only runs when *both* jobs in the test stage complete successfully.
 #   script:
