--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "lint:staged": "lint-staged",
     "clean-bundle": "cd android && ./gradlew clean && cd ..",
-    "build-android": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease"
+    "build-android": "cd android && ENVFILE=.env.staging ./gradlew assembleRelease",
+    "push-staging": "appcenter codepush release-react -a jezzs2k-gmail.com/TemplateRN -d Staging"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -36,12 +37,16 @@
     "@react-navigation/native-stack": "6.2.5",
     "@react-navigation/stack": "6.0.11",
     "@stripe/stripe-react-native": "0.2.3",
+    "appcenter": "4.3.0",
+    "appcenter-analytics": "4.3.0",
+    "appcenter-crashes": "4.3.0",
     "babel-plugin-module-resolver": "4.1.0",
     "deep-equal": "2.0.5",
     "i18next": "21.6.4",
     "react": "17.0.2",
     "react-i18next": "11.15.2",
     "react-native": "0.66.4",
+    "react-native-code-push": "7.0.4",
     "react-native-config": "1.4.5",
     "react-native-gesture-handler": "2.1.0",
     "react-native-safe-area-context": "3.3.2",
